# movie-ranker

./: .gitignore  README.md  get_movies_from_local.py  movie_ranker.py  omdb_handler.py  pandas.ipynb  pyproject.toml  pyspark.ipynb  requirements.txt
data/: movies.txt  movies_sample.txt
jupyter/: pandas.ipynb
src/movie_ranker/: __init__.py  get_movies_from_local.py  movie_ranker.py
tests/: conftest.py  test_omdb_handler.py
